<resources>
    <string name="app_name">Sly\'s Closet</string>
    <string name="welcome_to_sly_s_fashion_closet">WELCOME TO SLY\'s FASHION CLOSET</string>
    <string name="check_out_the_latest_fashion">Check Out The Latest Fashion</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="trousers">Trousers</string>
    <string name="socks_and_slides">Socks and Slides</string>
    <string name="my_order">My Order</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="t_shirts_trend">T-SHIRTS TREND</string>
    <string name="trousers_trend">TROUSERS TREND</string>
    <string name="socks_and_slides_trends">SOCKS AND SLIDES TRENDS</string>
    <string name="shoes_trends">SHOES TRENDS</string>
    <string name="shirts_trends">SHIRTS TRENDS</string>
    <string name="new_york_trend_nike">New York Trend NIKE</string>
    <string name="christian_dior_trends">Christian Dior Trends</string>
    <string name="gucci_trends">Gucci Trends</string>
    <string name="addidas_trends">Addidas Trends</string>
    <string name="louis_vuitton">Louis Vuitton</string>
    <string name="palm_angels">Palm Angels</string>
    <string name="nike_trousers">Nike Trousers</string>
    <string name="nike">Nike</string>
    <string name="_7_usd">$7 USD</string>
    <string name="shoes">Shoes</string>
    <string name="orders">Orders</string>
    <string name="gaga_sly">Gaga Sly</string>
    <string name="information">Information</string>
    <string name="name">Name :</string>
    <string name="phone">Phone :</string>
    <string name="instagram">Instagram :</string>
    <string name="_254792500665">+254792500665</string>
    <string name="https_www_instagram_com_gaga_sly">https://www.instagram.com/gaga_sly</string>
    <string name="here_is_more_about_us">Here is more about Us</string>
    <string name="payments">Payments</string>
    <string name="do_you_want_to_pay_7_ksh_750_to_sly_s_closet_acoount_no_token">Do you want to pay $7( ksh 750) to SLY\'s CLOSET Acoount no. Token?</string>
    <string name="enter_m_pesa_pin">Enter M-PESA PIN:</string>
    <string name="alphabets_4">Alphabets 4</string>
    <string name="cancel">CANCEL</string>
    <string name="send">SEND</string>
    <string name="sly_s_fashion_closet">SLY\'s Fashion Closet</string>
    <string name="we_are_located_at_nairobi_moi_avenue_2nd_floor">We are located at Nairobi Moi Avenue 2nd Floor</string>
    <string name="lets_dress_to_impress_with_sly_s_fashion_closets_having_the_latest_trends_in_fashion">Lets dress to impess with SLY\'s Fashion Closets. Having the latest trends in fashion.</string>
</resources>