<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34bdeb"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.Shirts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#50828C"
                app:cardCornerRadius="200dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:ignore="UselessParent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profileImage"
                android:layout_marginStart="150dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/j"
                android:scaleType="centerCrop" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginHorizontal="20dp"
        />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gaga_sly"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_254792500665"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/instagram"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/igSly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/https_www_instagram_com_gaga_sly"
            android:textSize="15sp"
            android:textColor="#142EC1"
            />

    </LinearLayout>




</LinearLayout>