<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34bdeb"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.Shirts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#50828C"
                app:cardCornerRadius="200dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/about"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/here_is_more_about_us"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sly_s_fashion_closet"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/store"
                    />

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:src="@drawable/placeholder"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/we_are_located_at_nairobi_moi_avenue_2nd_floor"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        />



                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:layout_marginTop="30dp"
                    android:text="@string/lets_dress_to_impress_with_sly_s_fashion_closets_having_the_latest_trends_in_fashion"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>